Remove popup border

--- a/chrome/content/selectedsearch.css
+++ b/chrome/content/selectedsearch.css
@@ -1,3 +1,4 @@
+panel#selectedsearch-popup { border-width: 0px }
 panel#selectedsearch-popup > menuitem { -moz-appearance: none; }
 panel#selectedsearch-popup > menuitem:hover { color: HighlightText; background-color: Highlight; }
 panel#selectedsearch-popup > menuitem > .menu-accel-container { visibility: collapse; }
